# airbnb-pricing

./: .gitignore  README.md  pyproject.toml
backend/: app.py  pyproject.toml
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: HotelCard.css  HotelCard.js  HotelList.css  HotelList.js
src/: hotel_price_finder.py
