[tool.poetry]
name = "airbnb-pricing"
version = "0.1.0"
description = "A tool to find hotel prices using Google Gemini API"
packages = [{include = "comparable_pricing"}]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
google-genai = "^1.4.0"
pydantic = "^2.10.6"
flask = "^3.1.0"
flask-cors = "^5.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hotel-prices = "comparable_pricing.hotel_price_finder:main"
